--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.9",
     "morgan": "^1.9.1",
-    "node-gyp": "^3.8.0"
+    "node-gyp": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
