--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.9",
     "morgan": "^1.9.1",
-    "node-gyp": "^4.0.0"
+    "multer": "^1.4.1",
+    "node-gyp": "^4.0.0",
+    "xls-to-json-lc": "^0.3.4",
+    "xlsx-to-json-lc": "^0.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
